tests/parser-test-files/parse-and.txt
================================================================================
Malformed and expression
================================================================================

(package test-package)

(define x (and))

--------------------------------------------------------------------------------

error: Malformed and expression
  --> test:3:15
   |
 3 |  (define x (and))
   |                ^ expected one or more arguments
